--- a/style.css
+++ b/style.css
@@ -60,7 +60,13 @@ a {
     background: rgb(60, 119, 5);
     border: none;
     border-radius: 5px;
-    min-width: 30vw;
+    min-width: 50%;
+    
+    display: flex;
+  
+    justify-content: center;
+    align-content: center;
+    
 }
 
 .about-me {
@@ -102,6 +108,26 @@ a {
   color: #880a01;
 }
 
+.learn-technique__title::before {
+  content: "  ";
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: blue;
+  margin-right: 12px;
+}
+
+.learn-technique__title::after {
+  content: "  ";
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: blue;
+  margin-left: 12px;
+}
+
 .learn-technique--special {
   border: 3px #026312 solid;
 }
@@ -111,6 +137,13 @@ a {
   padding: 8px;
   top: 0;
   width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+
 }
 
 .header__navigation {
@@ -142,8 +175,6 @@ a {
 
 .navigation--open{
     display: block;
- 
-
 }
 
 .navigation__link {
